--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <title>Cryptophan</title>
   </head>
   <body>
+        <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400" rel="stylesheet">
     <div id="root"></div>
   </body>
 </html>
